plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

application {
    mainModule = 'org.example.baramdemo'
    mainClass = 'org.example.baramdemo.Main'
}

java {
    modularity.inferModulePath = true
}

repositories {
    mavenCentral()
    jcenter()
}

ext {
    junitVersion = '5.10.2'
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_23 // JDK 23로 설정
    targetCompatibility = JavaVersion.VERSION_23  // JDK 23로 설정
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation files('lib/jnativehook-2.2.2.jar')
    implementation files('lib/opencv-4100.jar')
    implementation files('lib/sikulixapi-2.0.5.jar')
    implementation 'net.java.dev.jna:jna:5.12.0'  // JNA 의존성
    implementation 'net.java.dev.jna:jna-platform:5.12.0'  // JNA Platform 의존성
    implementation 'org.openjfx:javafx-controls:23'
    implementation 'org.openjfx:javafx-web:23'
    implementation 'org.openjfx:javafx-fxml:23'
    implementation('org.controlsfx:controlsfx:11.2.1')
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

sourceSets {
    main {
        resources {
            srcDir 'src/main/resources'
        }
    }
}

tasks.withType(Copy).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

run {
    jvmArgs = [
            "--module-path",
            "C:\\Program Files\\javafx-sdk-23.0.1\\lib" +
                    ";build/classes/java/main" +
                    ";C:\\Users\\rammus\\.gradle\\caches\\modules-2\\files-2.1\\org.kordamp.bootstrapfx\\bootstrapfx-core\\0.4.0\\8d019b30266c00770cf29921d1008ad7feed0ed6\\bootstrapfx-core-0.4.0.jar" +
                    ";C:\\Users\\rammus\\IdeaProjects\\baram-demo\\lib\\jnativehook-2.2.2.jar" +
                    ";C:\\Users\\rammus\\IdeaProjects\\baram-demo\\lib\\opencv-4100.jar" +
                    ";C:\\Users\\rammus\\IdeaProjects\\baram-demo\\lib\\sikulixapi-2.0.5.jar" +
                    ";C:\\Users\\rammus\\IdeaProjects\\baram-demo\\lib\\jna-5.15.0.jar" +
                    ";C:\\Users\\rammus\\.gradle\\caches\\modules-2\\files-2.1\\org.controlsfx\\controlsfx\\11.2.1\\e0f2568b8ee6e7a1639741f21b0024277ecbb7a7\\controlsfx-11.2.1.jar",

            "--add-modules",
            "javafx.controls,javafx.fxml",

            "--module",
            "org.example.baramdemo/org.example.baramdemo.Main",

            "-Djava.library.path=C:\\Users\\rammus\\IdeaProjects\\baram-demo\\lib"
    ]
}